# LUM-subnet

./: .env.example  .env.local  .env.production  .env.testnet  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: database.py
database/: access.py
docs/: COMPLETE_FLOW.md  DATABASE.md  DOC_INDEX.md  OPENAI_INTEGRATION.md  TESTNET_DEPLOYMENT.md
init-scripts/: 01-init-luminar.sh
migrations/: 20250817000001_initial_schema.sql  manager.py
neurons/: luminar_media_miner.py  luminar_media_validator.py  luminar_miner.py  luminar_validator.py  miner.py  validator.py
scripts/: README.md  deploy_testnet.sh  setup_database.py  setup_test_database.py  test_database.py
template/: mock.py  protocol.py
template/base/: neuron.py
template/validator/: luminar_forward.py  luminar_reward.py
