[project]
name = "luminar-subnet"
version = "1.0.0"
description = "Luminar Subnet Version - The Decentralized Crime Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luminar Network", email = "contact@luminar.network"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Bittensor and Database
    "bittensor>=7.0.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # Essential Python packages
    "pydantic>=2",
    "rich>=13",
    "pytest>=8",
    "numpy>=1",
    "setuptools~=70.0.0",
    # Data processing
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "geopy>=2.3.0",
    # Web and API
    "requests>=2.30.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.100.0",
    "starlette>=0.30.0",
    # Security and utilities
    "cryptography>=40.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "asyncio-throttle>=1.0.0",
    # AI and ML
    "torch>=2.0.0",
    "openai>=1.0.0",
    "pillow>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/Luminar-Network/Luminar-subnet"
Repository = "https://github.com/Luminar-Network/Luminar-subnet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template", "neurons", "config", "database", "migrations", "scripts", "tests", "verify"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
]
